# python-plugin-playground

./: README.md  config.json  factory.py  loader.py  main.py  pyproject.toml
data/: people.json
parsers/: parser.py  person_parser_v1.py  person_parser_v2.py  person_parser_v3.py
