[project]
name = "python-plugins"
version = "0.1.0"
description = ""
authors = [{ name = "Froilan Irizarry Rivera", email = "1918027+froi@users.noreply.github.com" }]
requires-python = "~=3.9"
dependencies = ["toml>=0.10.2,<0.11"]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
